# VTK-Demos

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/examples/: CMakeLists.txt
src/examples/Animation/: AnimateActors.cxx  AnimateActors.h  CMakeLists.txt  RotatingSphere.cxx
src/examples/Annotation/: CMakeLists.txt  MultiLineText.cxx  TextOrigin.cxx  XYPlot.cxx
src/examples/DataStructures/: BuildLocatorFromKClosestPoints.cxx  BuildOctree.cxx  CMakeLists.txt  ClosestNPoints.cxx  DataStructureComparison.cxx  IncrementalOctreePointLocator.cxx  KDTreeAccessPoints.cxx  KDTreeFindPointsWithinRadius.cxx  KDTreeFindPointsWithinRadiusDemo.cxx  KDTreeTimingDemo.cxx  KdTree.cxx  KdTreePointLocatorClosestPoint.cxx  ModifiedBSPTreeExtractCells.cxx  ModifiedBSPTreeTimingDemo.cxx  OBBTreeExtractCells.cxx  OBBTreeIntersectWithLine.cxx  OBBTreeTimingDemo.cxx  OctreeClosestPoint.cxx  OctreeFindPointsWithinRadius.cxx  OctreeFindPointsWithinRadiusDemo.cxx  OctreeKClosestPoints.cxx  OctreeTimingDemo.cxx  OctreeVisualize.cxx  PointLocatorFindPointsWithinRadiusDemo.cxx  StaticLocatorFindPointsWithinRadiusDemo.cxx  VisualizeKDTree.cxx  VisualizeModifiedBSPTree.cxx  VisualizeOBBTree.cxx
src/examples/GeometricObjects/: Arrow.cxx  Axes.cxx  CMakeLists.txt  Cell3DDemonstration.cxx  Circle.cxx  ColoredLines.cxx  Cone.cxx  ConeDemo.cxx  ConvexPointSet.cxx  Cube.cxx  Cube1.cxx  Cylinder.cxx  CylinderExample.cxx  Disk.cxx  Dodecahedron.cxx  EarthSource.cxx  EllipticalCylinder.cxx  EllipticalCylinderDemo.cxx  Frustum.cxx  GeometricObjectsDemo.cxx  Hexahedron.cxx  IsoparametricCellsDemo.cxx  Line.cxx  LongLine.cxx  OrientedArrow.cxx  OrientedCylinder.cxx  ParametricKuenDemo.cxx  ParametricSuperEllipsoidDemo.cxx  ParametricSuperToroidDemo.cxx  Plane.cxx  PlaneSourceDemo.cxx  Planes.cxx  PlanesIntersection.cxx  PlatonicSolids.cxx  Point.cxx  PolyLine.cxx  PolyLine1.cxx  Polygon.cxx  PolygonIntersection.cxx  Polyhedron.cxx  (+16 more)
src/examples/IO/: 3DSImporter.cxx  CMakeLists.txt  DEMReader.cxx  DumpXMLFile.cxx  ExportPolyDataScene.cxx  ImageReader2Factory.cxx  ImageWriter.cxx  ImportPolyDataScene.cxx  IndividualVRML.cxx  JPEGReader.cxx  MetaImageReader.cxx  MetaImageWriter.cxx  OBJImporter.cxx  PNGReader.cxx  ParticleReader.cxx  ReadAllPolyDataTypes.cxx  ReadAllPolyDataTypesDemo.cxx  ReadAllUnstructuredGridTypes.cxx  ReadBMP.cxx  ReadCML.cxx  ReadDICOM.cxx  ReadDICOMSeries.cxx  ReadExodusData.cxx  ReadImageData.cxx  ReadLegacyUnstructuredGrid.cxx  ReadOBJ.cxx  ReadPDB.cxx  ReadPLOT3D.cxx  ReadPLY.cxx  ReadPNM.cxx  ReadPlainTextTriangles.cxx  ReadPolyData.cxx  ReadRectilinearGrid.cxx  ReadSLC.cxx  ReadSTL.cxx  ReadStructuredGrid.cxx  ReadTIFF.cxx  ReadTextFile.cxx  ReadUnknownTypeXMLFile.cxx  ReadUnstructuredGrid.cxx  (+16 more)
src/examples/ImageData/: CMakeLists.txt  ClipVolume.cxx  ExtractVOI.cxx  GetCellCenter.cxx  ImageDataGeometryFilter.cxx  ImageDataToPointSet.cxx  ImageIterator.cxx  ImageIteratorDemo.cxx  ImageNormalize.cxx  ImageReslice.cxx  ImageTranslateExtent.cxx  ImageWeightedSum.cxx  IntersectLine.cxx  VoxelsOnBoundary.cxx
src/examples/ImageProcessing/: Attenuation.cxx  CMakeLists.txt  EnhanceEdges.cxx  GaussianSmooth.cxx  HybridMedianComparison.cxx  IdealHighPass.cxx  IsoSubsample.cxx  MedianComparison.cxx  MorphologyComparison.cxx  Pad.cxx  RescaleAnImage.cxx  VTKSpectrum.cxx
src/examples/Images/: Actor2D.cxx  BackgroundImage.cxx  BorderPixelSize.cxx  CMakeLists.txt  CannyEdgeDetector.cxx  Cast.cxx  CenterAnImage.cxx  Colored2DImageFusion.cxx  CombineImages.cxx  CombiningRGBChannels.cxx  DotProduct.cxx  DrawOnAnImage.cxx  DrawShapes.cxx  ExtractComponents.cxx  FillWindow.cxx  Flip.cxx  Gradient.cxx  ImageAccumulate.cxx  ImageAccumulateGreyscale.cxx  ImageAnisotropicDiffusion2D.cxx  ImageCheckerboard.cxx  ImageCityBlockDistance.cxx  ImageContinuousDilate3D.cxx  ImageContinuousErode3D.cxx  ImageConvolve.cxx  ImageCorrelation.cxx  ImageDifference.cxx  ImageDilateErode3D.cxx  ImageDivergence.cxx  ImageEllipsoidSource.cxx  ImageExport.cxx  (+58 more)
src/extend/: CMakeLists.txt  vtkLogger.cxx  vtkLogger.h
src/genraster/: CMakeLists.txt  colormap.cpp  colormap.h  interval.cpp  interval.h  main.cpp  plotrasteritembase.cpp  plotrasteritembase.h  plotspectrogram.cpp  plotspectrogram.h  point3d.cpp  point3d.h  rasterdata.cpp  rasterdata.h  scalemap.cpp  scalemap.h
(+533 files in other folders)
